--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="Technical Document.jpeg" class="image fit thumb"><img src="Technical Document.jpeg" alt="" /></a><br><br><br>
-								<h3>Tribute Page</h3>
+								<h3>Technical Document Page</h3>
 								
 								<a href="https://codepen.io/ecamacho94/full/qBVjMzG" class="button">View Full Page</a>
 							</article>
