--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="picture.jpeg" class="image avatar"><img src="picture.jpeg" alt="" /></a>
-					<h1><strong>My name is Emmanuel Camacho</strong>, a Graphic/Logo Designer<br />
+					<h1><strong>My name is Emmanuel Camacho</strong><br>, a Graphic/Logo Designer<br />
 					with Web Design and Development experience<br />
 					
 				</div>
