--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch With Me</h2>
-						<p>Let's Work together! Email me about job inquiries and other work or collaboration questions you have. I will return your email within 24 hours.</p>
+						<p>Let's Work Together! Email me about job inquiries and other work or collaboration questions you have. I will return your email within 24 hours.</p>
 						<div class="row">
 							
 							</div>
